--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     </header>
               <!-- Inicio Imagen  -->
     <section>
-        <h1>Bienvenidos Alejos Pizzas</h1>
+        <h1>Bienvenidos Alejos Pizzasprueba</h1>
         <img src="./img/Imagen Pizza principal.jpg"width="300px" alt="">
     </section>
             <!-- Seccion Pizzas  -->
