--- a/index.html
+++ b/index.html
@@ -153,13 +153,12 @@
     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3281.601295809455!2d-58.36900462452157!3d-34.664770760724636!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95a3334dda2dca4d%3A0xe40aa6ef2fe93f6c!2sElectricidad%20Alsina%20S.A.!5e0!3m2!1ses-419!2sar!4v1727875989585!5m2!1ses-419!2sar" width="400" height="400" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 </section>
  <!-- footer de la pagina -->
-<footer>
-    <h4>Datos de Contacto footer</h4>
+<footer id="pagina-footer">
+    <h4>Seguinos en nuestras redes sociales</h4>
     <div class="networkSocial">
         <a href=""i class="fa-brands fa-instagram"></a>
         <a href=""i class="fa-brands fa-facebook"></a>
         <a href=""i class="fa-brands fa-linkedin"></a>
-        <a href=""i class="fa-brands fa-instagram"></a>
     </div>
     <div class="copyright">
         <h6><i class="fa-solid fa-copyright">Todos los derechos reservados</i></h6>
